@@ -1,12 +1,26 @@
 
 require 'module-cluster'
 
-require_relative 'identifies_as/IdentifiesAs.rb'
-require_relative 'identifies_as/IdentifiesAs/ActuallyIsA.rb'
-require_relative 'identifies_as/IdentifiesAs/EqualsEqualsEquals.rb'
+module ::IdentifiesAs
+end
+
+basepath = 'identifies_as/IdentifiesAs'
+
+files = [
+  
+  'ActuallyIsA',
+  
+  'ClassInstance',
+  'ObjectInstance'
+  
+]
+
+files.each do |this_file|
+  require_relative( File.join( basepath, this_file ) + '.rb' )
+end
+
+require_relative( basepath + '.rb' )
 
 class ::Object
-  extend ::IdentifiesAs::EqualsEqualsEquals
-  include ::IdentifiesAs::ActuallyIsA
-  extend ::IdentifiesAs::ActuallyIsA
+  include ::IdentifiesAs
 end
