@@ -3,7 +3,8 @@ module ::IdentifiesAs
   
   extend ::ModuleCluster::Define::Cluster
   
-  include_also_extends( self )
+  include self::ObjectInstance
+  include_also_extends( self::ClassInstance )
 
   @identities = { }
   @instance_identities = { }
@@ -54,6 +55,22 @@ module ::IdentifiesAs
 
   def self.object_identifies_as?( object, other_object_type )
 
+    object_identifies = object_instance_identifies_as?( object, other_object_type )
+
+    unless object_identifies
+      object_identifies = object_instances_identify_as?( object.class, other_object_type )
+    end
+    
+    return object_identifies
+    
+  end
+
+  #########################################
+  #  self.object_instance_identifies_as?  #
+  #########################################
+
+  def self.object_instance_identifies_as?( object, other_object_type )
+    
     object_identifies = false
     
     object_ancestor_chain = nil
@@ -75,10 +92,6 @@ module ::IdentifiesAs
         break if object_identifies = identifies_as_hash.has_key?( other_object_type )
       end
   
-    end
-
-    unless object_identifies
-      object_identifies = object_instances_identify_as?( object.class, other_object_type )
     end
     
     return object_identifies
@@ -159,9 +172,9 @@ module ::IdentifiesAs
 
   end
 
-  ##################################################
+  ################################################
   #  self.object_stop_instances_identifying_as!  #
-  ##################################################
+  ################################################
   
   def self.object_stop_instances_identifying_as!( object_class, *objects )
 
@@ -175,125 +188,5 @@ module ::IdentifiesAs
     return identifies_as_hash
 
   end
-  
-  ####################
-  #  identifies_as!  #
-  ####################
-  
-  # Cause receiver to identify as specified objects.
-  # @param [Array<Object>] objects Other objects self should identify as.
-  # @return [Object] Self.
-  def identifies_as!( *objects )
-
-    return ::IdentifiesAs.object_identifies_as!( self, *objects )
-    
-  end
-
-  ############################
-  #  instances_identify_as!  #
-  ############################
-  
-  # Cause instances of receiver to identify as specified objects.
-  # @param [Array<Object>] objects Other objects self should identify as.
-  # @return [Object] Self.
-  def instances_identify_as!( *objects )
-    
-    return ::IdentifiesAs.object_instances_identify_as!( self, *objects )
-    
-  end
-
-  ####################
-  #  identifies_as?  #
-  ####################
-  
-  # Query whether receiver identifies as specified object.
-  # @param [Object] object Object against which identity is being tested.
-  # @return [true,false] Whether receiver identifies as object.
-  def identifies_as?( object )
-    
-    return ::IdentifiesAs.object_identifies_as?( self, object )    
-    
-  end
-
-  ############################
-  #  instances_identify_as?  #
-  ############################
-  
-  # Query whether instances of receiver identify as specified object.
-  # @param [Object] object Object against which identity is being tested.
-  # @return [true,false] Whether instances of receiver identify as object.
-  def instances_identify_as?( object )
-    
-    return ::IdentifiesAs.object_instances_identify_as?( self, object )    
-    
-  end
-
-  ################
-  #  identities  #
-  ################
-  
-  # Identities that receiver identifies as, beyond those which it actually is.
-  # @return [Array<Object>] Identities receiver identifies as.
-  def identities
-    
-    return ::IdentifiesAs.object_identities( self )    
-    
-  end
-
-  #########################
-  #  instance_identities  #
-  #########################
-  
-  # Identities that instances of receiver identify as, beyond those which it actually is.
-  # @return [Array<Object>] Identities instances of receiver identifies as.
-  def instance_identities
-    
-    return ::IdentifiesAs.object_instance_identities( self )    
-    
-  end
-
-  ##############################
-  #  stop_identifying_as!  #
-  ##############################
-  
-  # Cause receiver to no longer identify as specified objects.
-  # @param [Array<Object>] objects Other objects receiver should no longer identify as.
-  # @return [Object] Self.
-  def stop_identifying_as!( *objects )
-    
-    return ::IdentifiesAs.object_stop_identifying_as!( self, *objects )    
-    
-  end
-
-  ####################################
-  #  stop_instances_identifying_as!  #
-  ####################################
-  
-  # Cause instances of receiver to no longer identify as specified objects.
-  # @param [Array<Object>] objects Other objects instance of receiver should no longer identify as.
-  # @return [Object] Self.
-  def stop_instances_identifying_as!( *objects )
-    
-    return ::IdentifiesAs.object_stop_instances_identifying_as!( self, *objects )    
-    
-  end
-
-  ###########
-  #  is_a?  #
-  ###########
-  
-  def is_a?( object )
-    
-    is_type = false
-    
-    if identifies_as?( object )    
-      is_type = true
-    else
-      is_type = super
-    end
-    
-    return is_type
-    
-  end
-    
+      
 end
